FEAT: Setup Use Case
